--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "9.4.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^3.10.0",
     "sass": "^1.26.5"
   }
 }
